<resources>
    <string name="app_name">BrewBuddy</string>
    <string name="hint_grams_coffee">Grams of coffee</string>
    <string name="recipe_grams_coffee_label">grams coffee</string>
    <string name="hint_grams_water">Grams of water</string>
    <string name="recipe_grams_water_label">grams water</string>
    <string name="recipe_time_minutes_label">minutes</string>
    <string name="recipe_time_seconds_label">seconds</string>
    <string name="recipe_brew_button">Start brewing!</string>
    <string name="live_brew_button_finish">Finish</string>
    <string name="live_brew_button_start">Start</string>
    <string name="review_acidity_label">Acidity</string>
    <string name="review_body_label">Body</string>
    <string name="review_flavor_label">Flavor</string>
    <string name="review_overall_label">Overall</string>
    <string name="review_submit_button">Submit</string>
    <string name="notification_text">Coffee is brewing</string>
    <string name="notification_title">Brew Buddy</string>
    <string-array name="method_list">
        <item>Chemex</item>
        <item>Hario V60</item>
        <item>Bee House</item>
        <item>Kalita Wave</item>
        <item>Moka Pot</item>
        <item>French Press</item>
        <item>Aeropress</item>
    </string-array>
    <string name="title_activity_tabbed_recipe">TabbedRecipe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_chemex">Chemex</string>
    <string name="menu_hario_v60">Hario V60</string>
    <string name="menu_bee_house">Bee House</string>
    <string name="menu_kalita_wave">Kalita Wave</string>
    <string name="menu_moka_pot">Moka Pot</string>
    <string name="menu_french_press">French Press</string>
    <string name="menu_aeropress">Aeropress</string>
    <string name="menu_show_all">Show all</string>
</resources>
