<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:rsv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calpoly.ndietz.brewbuddy.BrewReviewActivity"
    android:background="@color/primary_material_dark"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_acidity_label"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"/>

                <com.github.channguyen.rsv.RangeSliderView
                    android:id="@+id/review_acidity"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    rsv:filledColor="@color/accent_material_dark"
                    rsv:rangeCount="6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_body_label"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"/>

                <com.github.channguyen.rsv.RangeSliderView
                    android:id="@+id/review_body"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    rsv:filledColor="@color/accent_material_dark"
                    rsv:rangeCount="6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_flavor_label"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"/>

                <com.github.channguyen.rsv.RangeSliderView
                    android:id="@+id/review_flavor"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    rsv:filledColor="@color/accent_material_dark"
                    rsv:rangeCount="6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review_overall_label"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"/>

                <com.github.channguyen.rsv.RangeSliderView
                    android:id="@+id/review_overall"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    rsv:filledColor="@color/accent_material_dark"
                    rsv:slotRadiusPercent="0.3"
                    rsv:rangeCount="6"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="40dp"
                android:id="@+id/review_submit"
                android:text="@string/review_submit_button"
                android:background="@color/accent_material_dark"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
